fix[Link T-628]: fixed gap in TopNavigation->Link

--- a/src/components/topNavigation/components/link.module.scss
+++ b/src/components/topNavigation/components/link.module.scss
@@ -26,6 +26,7 @@
   transition: background-color 0.2s ease;
   border-radius: 6px;
   z-index: 1;
+  gap: var(--xs-gap);
   @include no-selection;
 
   &:before {
